# CS_compiler

./: .gitignore  CMakeLists.txt  README.md  install_grammar.sh
cmake/: CompileOptions.cmake
examples/: codegen_test1.cs  codegen_test2.cs  nod  nod.cs  nod.ll  nod.s  opt_test.cs  prime.cs  scope_test.cs  scope_test.ll  scope_test.s  text  text.cs  text.ll  text.s
src/app/: CMakeLists.txt  main.cpp
src/app/codegen/: codegen.cpp  codegen.hpp
src/app/grammar/: Csharp.g4
src/app/optimizer/: optimizer.cpp  optimizer.hpp
src/app/parser/: parser.cpp  parser.hpp
src/app/parser/ast/: ast.cpp  ast.hpp
src/app/parser/symbol_table/: symbol_table.cpp  symbol_table.hpp
src/app/semantic/: semantic.cpp  semantic.hpp
tests/: CMakeLists.txt  compile.sh  tests.cpp
tests/codegen-tests-cs/: test1.cs  test1.ll
tests/lexer-tests-cs/: test1.cs
tests/parser-tests-cs/: cycletest.cs  test.cs
